--- a/ADEL/23-10-11.md
+++ b/ADEL/23-10-11.md
@@ -2,6 +2,17 @@
 
 # 1.리버싱이란
 
-정리
-정리
-정리
+리버싱은 프로그램의 구조를 아는 것임  
+리버싱에서는 메모리 구조가 필요함 (범용레지스터, 메모리 구조, 스택 프레임을 이해하는게 중요)  
+  
+pe파일은 헤드와 바디로 구성, 헤드엔 파일 실행시 필요한 정보들이 기록되어 있음, 바디에는 코드가 저장됨  
+  
+pe파일을 실행하면 하드디스크의 pe파일의 헤더와 바디를 읽어 메모리에 저장. (헤더에는 코드에서 불러오는 라이브러리 등이 저장)  
+  
+cpu가 프로세스를 실행할 때는, 가장 빠른 레지스터에 메모리에 있는 값을 불러들어서 확인 함.  
+프로세스가 여러개 실행하기 위해서 (cpu가 병렬 처리하려면) 프로세스가 다른 프로세스에게 레지스터 공간을 넘겨주는데  
+레지스터 내용을 복사해 메모리에 저장하고 넘겨준다. 이를 "컨텍스트 스위칭"이라고 한다.  
+  
+cpu의 레지스터는 여러개의 공간으로 구성되어있는데 32bit기준 범용레지스터로는 **eax, ebx, ecx, edx, esi, edi, ebp, esp, eip** 이 있다.  
+> eax : 누산기, 논리연산을 수행할 때 사용, 반환값을 저장한다. (Ax가 초반 16bit차지 여기서 8bit씩 AH 와 AL이 있다.)  
+> ebx : 
