--- a/ADEL/23-10-11.md
+++ b/ADEL/23-10-11.md
@@ -2,6 +2,9 @@
 
 # 1.리버싱이란
 
+https://it-neicebee.tistory.com/104
+파이썬 명령어 중요
+
 리버싱은 프로그램의 구조를 아는 것임  
 리버싱에서는 메모리 구조가 필요함 (범용레지스터, 메모리 구조, 스택 프레임을 이해하는게 중요)  
   
